# jolt

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  dprint.jsonc  hk.pkl  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  review-notes.md
crates/jolt_cli/: Cargo.toml  build.rs
crates/jolt_cli/src/: cli.rs  config_schema.rs  docs_generation.rs  error.rs  main.rs
crates/jolt_cli/src/fmt/: args.rs  config.rs  discover.rs  mod.rs  run.rs
crates/jolt_cli/tests/: cli.rs  cli_snapshots.rs
crates/jolt_cli/tests/snapshots/: cli_snapshots__check_mode_accepts_formatted_file_and_reports_summary.snap  cli_snapshots__check_mode_parse_errors_report_diagnostics_and_do_not_write.snap  cli_snapshots__check_mode_reports_all_changed_files_with_summary_count.snap  cli_snapshots__check_mode_reports_changed_file_without_writing.snap  cli_snapshots__check_mode_reports_changed_stdin_filename.snap  cli_snapshots__check_mode_reports_mixed_changed_and_failed_files.snap  cli_snapshots__check_mode_reports_mixed_changed_and_invalid_files.snap  cli_snapshots__check_mode_reports_mixed_changed_and_recovered_files.snap  cli_snapshots__check_mode_reports_recovered_parse_as_changed.snap  cli_snapshots__check_mode_reports_syntax_error_as_failed.snap  cli_snapshots__completions_generate_shell_script.snap  cli_snapshots__completions_help_describes_supported_shells.snap  cli_snapshots__config_errors_report_diagnostics.snap  cli_snapshots__config_help_describes_inspection_commands.snap  cli_snapshots__config_list_reports_discovered_configs.snap  cli_snapshots__config_list_reports_no_configs.snap  cli_snapshots__config_resolve_reports_effective_config.snap  cli_snapshots__config_schema_reports_dprint_schema.snap  cli_snapshots__config_schema_reports_jolt_schema.snap  cli_snapshots__docs_manpages_generate_cohesive_set.snap  cli_snapshots__explicit_unknown_extension_file_is_processed_as_java.snap  cli_snapshots__explicit_unknown_extension_file_reports_unsupported_extension.snap  cli_snapshots__fmt_help_describes_formatter_contract.snap  cli_snapshots__format_command_formats_stdin_to_stdout.snap  cli_snapshots__invalid_flags_report_usage_errors.snap  cli_snapshots__manpage_generates_roff_document.snap  cli_snapshots__manpage_help_describes_roff_output.snap  cli_snapshots__missing_path_reports_error.snap  cli_snapshots__parse_errors_report_diagnostics_and_do_not_write.snap  cli_snapshots__recovered_parse_formats_and_writes_file.snap  cli_snapshots__stdin_parse_errors_use_stdin_filename_in_diagnostics.snap  cli_snapshots__stdin_recovered_parse_formats_to_stdout.snap  cli_snapshots__stdin_syntax_error_is_rejected_without_stdout.snap  cli_snapshots__syntax_error_is_rejected_without_writing_file.snap  cli_snapshots__top_level_help_describes_product_cli.snap  cli_snapshots__write_mode_counts_clean_files_as_formatted.snap
crates/jolt_dprint_schema_gen/: Cargo.toml
crates/jolt_dprint_schema_gen/src/: main.rs
crates/jolt_fmt_cli/: Cargo.toml
crates/jolt_fmt_cli/src/: args.rs  config.rs  discover.rs  main.rs  run.rs
crates/jolt_fmt_cli/tests/: cli.rs  cli_snapshots.rs
crates/jolt_fmt_cli/tests/snapshots/: cli_snapshots__check_mode_accepts_formatted_file_without_user_output.snap  cli_snapshots__check_mode_parse_errors_report_diagnostics_and_do_not_write.snap  cli_snapshots__check_mode_reports_all_changed_files_with_summary_count.snap  cli_snapshots__check_mode_reports_changed_file_without_writing.snap  cli_snapshots__explicit_unknown_extension_file_is_processed_as_java.snap  cli_snapshots__missing_path_reports_error.snap  cli_snapshots__parse_errors_report_diagnostics_and_do_not_write.snap  (+1 more)
crates/jolt_fmt_core/: Cargo.toml
crates/jolt_fmt_core/src/: lib.rs
crates/jolt_fmt_dprint/: Cargo.toml
crates/jolt_fmt_dprint/src/: configuration.rs  handler.rs  lib.rs
crates/jolt_fmt_dprint/tests/: configuration.rs  dprint_smoke.rs  handler.rs
crates/jolt_fmt_ir/: Cargo.toml
crates/jolt_fmt_ir/src/: comment_text.rs  document.rs  formatter_ignore.rs  lib.rs  options.rs  recovery.rs  render.rs  root.rs  source_fragment.rs  tests.rs  token_trivia.rs  validation.rs  width.rs
crates/jolt_formatter/: Cargo.toml
crates/jolt_formatter/src/: lib.rs
crates/jolt_java_fmt/: Cargo.toml
crates/jolt_java_fmt/src/: api.rs  comments.rs  context.rs  diagnostics.rs  format.rs  layout.rs  lib.rs  options.rs  policy.rs  rules.rs  wrapping.rs
crates/jolt_java_fmt/src/rules/: mod.rs  (+16 more)
crates/jolt_java_fmt/tests/: corpus.rs  corpus_fixtures.rs  formatter_ignore_edges.rs  known_regressions.rs  layout_fit_boundaries.rs  normalization_authority.rs  oracle_fixtures.rs  recovery_snapshots.rs  style_fixtures.rs  trivia_conservation.rs  trivia_regressions.rs  upstream_doc_snapshots.rs
crates/jolt_java_syntax/: Cargo.toml
crates/jolt_java_syntax/src/: kind.rs  language.rs  lib.rs  normalization.rs  schema.rs  schema_audit.rs  shape.rs
crates/jolt_java_syntax/tests/: corpus.rs  lexer_fixtures.rs  normalization.rs  parser_fixtures.rs  parser_progress.rs
crates/jolt_kotlin_fmt/: Cargo.toml
crates/jolt_kotlin_fmt/src/: context.rs  format.rs  lib.rs
crates/jolt_kotlin_fmt/tests/: corpus.rs  corpus_fixtures.rs  known_regressions.rs  layout_fit_boundaries.rs  normalization_authority.rs  recovery_snapshots.rs  trivia_conservation.rs
crates/jolt_kotlin_syntax/: Cargo.toml
crates/jolt_kotlin_syntax/src/: kind.rs  language.rs  lib.rs  normalization.rs  schema.rs  schema_audit.rs  shape.rs
crates/jolt_kotlin_syntax/tests/: accessors.rs  corpus.rs  imported_fixtures.rs  normalization.rs  parser_progress.rs
crates/jolt_syntax/: Cargo.toml
crates/jolt_syntax/src/: accessors.rs  comment.rs  conservation.rs  diagnostic.rs  event.rs  kind.rs  language.rs  lib.rs  normalization.rs  parse_debug.rs  projection.rs  schema.rs  syntax_tree.rs  tests.rs  text.rs  tree_sink.rs
crates/jolt_test_support/: Cargo.toml
crates/jolt_test_support/src/: diagnostic_ownership.rs  lib.rs  schema_audit.rs
crates/jolt_test_support/tests/: architecture_gates.rs
tools/bench/driver/: Cargo.toml
(+2833 files in other folders)
