[package]
name = "jolt_cli"
version = "0.20260705.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jolt"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.3"
figment = { version = "0.10", features = ["toml"] }
globset = "0.4"
humanize-duration = "0.0.7"
ignore = "0.4"
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_fmt_ir = { path = "../jolt_fmt_ir" }
jolt_formatter = { path = "../jolt_formatter" }
jolt_text = { path = "../jolt_text" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.48"
tempfile = "3.23"
