[package]
name = "jolt_dprint_schema_gen"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jolt-dprint-schema-gen"
path = "src/main.rs"

[dependencies]
jolt_formatter = { path = "../jolt_formatter", features = ["schema"] }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
