[package]
name = "jolt_fmt_cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jolt"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
globset = "0.4"
ignore = "0.4"
jolt_fmt_core = { path = "../jolt_fmt_core" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.48"
tempfile = "3.23"
