[package]
name = "jolt_fmt_core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_java_fmt = { path = "../jolt_java_fmt" }
jolt_text = { path = "../jolt_text" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
