[package]
name = "jolt_fmt_dprint"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:serde_json", "dprint-core/wasm", "jolt_fmt_core/serde"]

[dependencies]
dprint-core = { version = "0.68.2", default-features = false }
jolt_fmt_core = { path = "../jolt_fmt_core" }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true
