[package]
name = "jolt_fmt_ir"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_syntax = { path = "../jolt_syntax" }
schemars = { version = "0.8", optional = true, default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
unicode-width = "0.2.2"

[features]
schema = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[lints]
workspace = true
