[package]
name = "jolt_fmt_ir"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_syntax = { path = "../jolt_syntax" }
jolt_text = { path = "../jolt_text" }
serde = { version = "1.0", features = ["derive"], optional = true }
unicode-width = "0.2.2"

[dev-dependencies]
jolt_java_syntax = { path = "../jolt_java_syntax" }

[features]
bench = []
serde = ["dep:serde"]

[lints]
workspace = true
