[package]
name = "jolt_formatter"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_fmt_ir = { version = "0.0.0", path = "../jolt_fmt_ir" }
jolt_java_fmt = { path = "../jolt_java_fmt" }
jolt_kotlin_fmt = { path = "../jolt_kotlin_fmt" }

[features]
serde = ["jolt_fmt_ir/serde"]

[lints]
workspace = true
