[package]
name = "jolt_java_fmt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_fmt_ir = { path = "../jolt_fmt_ir" }
jolt_java_syntax = { path = "../jolt_java_syntax" }

[dev-dependencies]
insta = "1.48"
jolt_test_support = { path = "../jolt_test_support" }

[lints]
workspace = true
