[package]
name = "jolt_kotlin_fmt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_fmt_ir = { path = "../jolt_fmt_ir" }
jolt_kotlin_syntax = { path = "../jolt_kotlin_syntax" }
jolt_syntax = { path = "../jolt_syntax" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
insta = "1.48"
jolt_test_support = { path = "../jolt_test_support" }

[lints]
workspace = true
