[package]
name = "jolt_kotlin_syntax"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_syntax = { path = "../jolt_syntax" }
jolt_text = { path = "../jolt_text" }
num_enum = "0.7.6"
unicode-general-category = "1.1"

[dev-dependencies]
insta = "1.48"

[lints]
workspace = true
