[package]
name = "jolt_syntax"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_text = { path = "../jolt_text" }

[features]
bench = []

[lints]
workspace = true
