[package]
name = "jolt_test_support"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jolt_diagnostics = { path = "../jolt_diagnostics" }
jolt_fmt_ir = { path = "../jolt_fmt_ir" }
jolt_syntax = { path = "../jolt_syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2.2"

[lints]
workspace = true
